--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,12 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "firebase/php-jwt": "^6.4",
         "gesdinet/jwt-refresh-token-bundle": "^1.1",
+        "lcobucci/jwt": "^4.3",
         "lexik/jwt-authentication-bundle": "^2.18",
+        "nelmio/api-doc-bundle": "^4.11",
+        "nixilla/php-jwt": "^0.1.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
         "ramsey/uuid-doctrine": "^2.0",
