--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    secret_key: '%env(resolve:JWT_SECRET_KEY)%'
+    jwt_token_ttl: '%env(int:JWT_TOKEN_TTL)%' # 1 hour
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -28,5 +29,8 @@ services:
             - '@doctrine'
             - 'App\Application\Domain\User\User'
 
+
+    acme_api.encoder.nixilla_jwt_encoder:
+        class: App\Application\Infrastructure\Persistence\JWT\NixillaJWTEncoder
 
 
